--- a/config/sync/core.entity_view_display.block_content.follow_me.default.yml
+++ b/config/sync/core.entity_view_display.block_content.follow_me.default.yml
@@ -7,8 +7,10 @@ dependencies:
     - field.field.block_content.follow_me.field_add_link_to_rss_feed_page
     - field.field.block_content.follow_me.field_display_social
     - field.field.block_content.follow_me.field_follow_me_widget_title
+    - field.field.block_content.follow_me.field_links
     - field.field.block_content.follow_me.field_make_embeddable
-    - field.field.block_content.follow_me.field_profile_url
+  module:
+    - entity_reference_revisions
 id: block_content.follow_me.default
 targetEntityType: block_content
 bundle: follow_me
@@ -42,6 +44,15 @@ content:
     third_party_settings: {  }
     type: string
     region: content
+  field_links:
+    type: entity_reference_revisions_entity_view
+    weight: 6
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    region: content
   field_make_embeddable:
     weight: 5
     label: above
@@ -51,14 +62,6 @@ content:
       format_custom_true: ''
     third_party_settings: {  }
     type: boolean
-    region: content
-  field_profile_url:
-    weight: 6
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
     region: content
 hidden:
   langcode: true
