--- a/config/sync/core.entity_view_display.block_content.follow_me.default.yml
+++ b/config/sync/core.entity_view_display.block_content.follow_me.default.yml
@@ -6,62 +6,30 @@ dependencies:
     - block_content.type.follow_me
     - field.field.block_content.follow_me.field_add_link_to_rss_feed_page
     - field.field.block_content.follow_me.field_display_social
-    - field.field.block_content.follow_me.field_follow_me_widget_title
     - field.field.block_content.follow_me.field_links
     - field.field.block_content.follow_me.field_make_embeddable
+    - field.field.block_content.follow_me.field_widget_title
   module:
-    - entity_reference_revisions
+    - layout_builder
+third_party_settings:
+  layout_builder:
+    sections: {  }
 id: block_content.follow_me.default
 targetEntityType: block_content
 bundle: follow_me
 mode: default
 content:
-  field_add_link_to_rss_feed_page:
-    weight: 4
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
+  field_widget_title:
+    type: string
+    weight: 0
     region: content
-  field_display_social:
-    weight: 3
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
-    region: content
-  field_follow_me_widget_title:
-    weight: 1
     label: above
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    type: string
-    region: content
-  field_links:
-    type: entity_reference_revisions_entity_view
-    weight: 6
-    label: above
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    region: content
-  field_make_embeddable:
-    weight: 5
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
-    region: content
 hidden:
+  field_add_link_to_rss_feed_page: true
+  field_display_social: true
+  field_links: true
+  field_make_embeddable: true
   langcode: true
