--- a/config/sync/core.entity_view_display.media.image.slideshow_wide.yml
+++ b/config/sync/core.entity_view_display.media.image.slideshow_wide.yml
@@ -7,8 +7,10 @@ dependencies:
     - field.field.media.image.field_image_caption
     - field.field.media.image.field_media_image
     - field.field.media.image.field_taxonomy_terms
+    - image.style.os_slideshow_wide
     - media.type.image
   module:
+    - image
     - layout_builder
 third_party_settings:
   layout_builder:
@@ -20,18 +22,19 @@ targetEntityType: media
 bundle: image
 mode: slideshow_wide
 content:
-  field_taxonomy_terms:
-    weight: 1
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
+  field_media_image:
+    type: image
+    weight: 0
     region: content
+    label: hidden
+    settings:
+      image_style: os_slideshow_wide
+      image_link: ''
+    third_party_settings: {  }
 hidden:
   created: true
   field_image_caption: true
-  field_media_image: true
+  field_taxonomy_terms: true
   langcode: true
   name: true
   thumbnail: true
