--- a/config/sync/core.entity_view_display.paragraph.slideshow.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.slideshow.default.yml
@@ -48,7 +48,7 @@ content:
   field_slide_image:
     type: entity_reference_entity_view
     weight: 2
-    label: above
+    label: hidden
     settings:
       view_mode: slideshow_wide
       link: false
