Issue #12123 - Implement block content settings selection into slideshow view mode

--- a/config/sync/core.entity_view_display.block_content.slideshow.default.yml
+++ b/config/sync/core.entity_view_display.block_content.slideshow.default.yml
@@ -33,7 +33,7 @@ content:
     settings:
       optionset: default
       skin: ''
-      view_mode: default
+      view_mode: slideshow_standard
       cache: 0
       current_view_mode: default
       override: false
