--- a/config/sync/config_split.config_split.development.yml
+++ b/config/sync/config_split.config_split.development.yml
@@ -7,6 +7,7 @@ label: Development
 description: 'Configs which are related to coding and development.'
 folder: ../dev_config
 module:
+  restui: 0
   devel: 0
   kint: 0
 theme: {  }
