--- a/config/sync/core.entity_view_display.node.page.block.yml
+++ b/config/sync/core.entity_view_display.node.page.block.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.block
     - field.field.node.page.body
+    - field.field.node.page.field_attached_media
     - field.field.node.page.field_taxonomy_terms
     - node.type.page
   module:
@@ -34,5 +35,6 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_attached_media: true
   field_taxonomy_terms: true
   langcode: true
