Issue #11481 - Probable fix for site-install error

--- a/composer.json
+++ b/composer.json
@@ -351,7 +351,8 @@
                 "Getlabel() on null layout builder.": "https://www.drupal.org/files/issues/2018-07-16/2985882-entityfield-2.patch",
                 "'view_path' is set to /views/ajax after second ajax request": "https://www.drupal.org/files/issues/2018-03-14/drupal-views_path_ajax-2866386-10.patch",
                 "Image styles fails with absolute path": "https://www.drupal.org/files/issues/image_styles-2754273-7.patch",
-                "Allow Redirectresponse to override ?destination": "https://www.drupal.org/files/issues/2950883-2.patch"
+                "Allow Redirectresponse to override ?destination": "https://www.drupal.org/files/issues/2950883-2.patch",
+                "Cannot add a context in Drupal 8.7 with layout builder installed": "https://www.drupal.org/files/issues/2019-06-11/context-config-schema-for-lb-support-3043383-12.patch"
             },
             "drupal/group_purl": {
                 "Prevent base path from interfering with purl detection": "https://www.drupal.org/files/issues/2019-04-12/group_purl.3026646-3.basepath.patch",
