--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,6 @@
         },
         {
             "type": "vcs",
-            "url": "https://github.com/openscholar/drupal-test-traits"
-        },
-        {
-            "type": "vcs",
             "url": "https://github.com/openscholar/groupmenu"
         },
         {
@@ -252,7 +248,7 @@
         "drupal/devel": "^1.2",
         "drupal/features": "^3.7",
         "drupal/restui": "^1.17",
-        "weitzman/drupal-test-traits": "dev-pass-chrome-driver-options"
+        "weitzman/drupal-test-traits": "^1.3"
     },
     "conflict": {
         "drupal/drupal": "*"
