Issue #12504 - Fix terms display on reference entity bundles

--- a/config/sync/core.entity_view_display.node.page.block.yml
+++ b/config/sync/core.entity_view_display.node.page.block.yml
@@ -34,5 +34,6 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_attached_media: true
   field_taxonomy_terms: true
   langcode: true
