--- a/config/sync/core.entity_view_display.bibcite_reference.broadcast.default.yml
+++ b/config/sync/core.entity_view_display.bibcite_reference.broadcast.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.bibcite_reference.broadcast.field_attach_files
     - field.field.bibcite_reference.broadcast.field_extra_fields
     - field.field.bibcite_reference.broadcast.field_publication_image
+    - field.field.bibcite_reference.broadcast.field_redirect_to_source
     - field.field.bibcite_reference.broadcast.field_taxonomy_terms
   enforced:
     module:
@@ -15,9 +16,14 @@ dependencies:
       - bibcite_entity.bibcite_reference_type.broadcast
   module:
     - bibcite_entity
+    - cp_taxonomy
     - image
     - key_value_field
+    - layout_builder
     - text
+third_party_settings:
+  layout_builder:
+    sections: {  }
 _core:
   default_config_hash: afZQHmXUYIdcJsAA64fl9c_xx8JVh0AaxW3_li-Dans
 id: bibcite_reference.broadcast.default
@@ -434,11 +440,12 @@ content:
     region: content
   field_taxonomy_terms:
     weight: 103
-    label: above
+    label: hidden
     settings:
-      link: true
+      label: 'See also'
+      number_of_characters: 94
     third_party_settings: {  }
-    type: entity_reference_label
+    type: cp_taxonomy_comma_separator
     region: content
   full_text:
     type: text_default
