--- a/config/sync/core.entity_view_display.bibcite_reference.working_paper.default.yml
+++ b/config/sync/core.entity_view_display.bibcite_reference.working_paper.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.bibcite_reference.working_paper.field_taxonomy_terms
   module:
     - bibcite_entity
+    - cp_taxonomy
     - layout_builder
     - text
 third_party_settings:
@@ -23,7 +24,7 @@ mode: default
 content:
   author:
     type: bibcite_contributor_label
-    weight: 3
+    weight: 0
     region: content
     label: above
     settings:
@@ -33,14 +34,14 @@ content:
     third_party_settings: {  }
   bibcite_abst_e:
     type: basic_string
-    weight: 6
+    weight: 4
     region: content
     label: above
     settings: {  }
     third_party_settings: {  }
   bibcite_abst_f:
     type: basic_string
-    weight: 7
+    weight: 5
     region: content
     label: above
     settings: {  }
@@ -48,7 +49,7 @@ content:
   bibcite_access_date:
     label: above
     type: string
-    weight: 50
+    weight: 48
     region: content
     settings:
       link_to_entity: false
@@ -56,7 +57,7 @@ content:
   bibcite_accession_number:
     label: above
     type: string
-    weight: 34
+    weight: 32
     region: content
     settings:
       link_to_entity: false
@@ -64,14 +65,14 @@ content:
   bibcite_alternate_title:
     label: above
     type: string
-    weight: 43
+    weight: 41
     region: content
     settings:
       link_to_entity: false
     third_party_settings: {  }
   bibcite_auth_address:
     type: basic_string
-    weight: 16
+    weight: 14
     region: content
     label: above
     settings: {  }
@@ -79,7 +80,7 @@ content:
   bibcite_call_number:
     label: above
     type: string
-    weight: 35
+    weight: 33
     region: content
     settings:
       link_to_entity: false
@@ -87,56 +88,56 @@ content:
   bibcite_citekey:
     label: above
     type: string
-    weight: 37
+    weight: 35
     region: content
     settings:
       link_to_entity: false
     third_party_settings: {  }
   bibcite_custom1:
     type: basic_string
-    weight: 9
+    weight: 7
     region: content
     label: above
     settings: {  }
     third_party_settings: {  }
   bibcite_custom2:
     type: basic_string
-    weight: 10
+    weight: 8
     region: content
     label: above
     settings: {  }
     third_party_settings: {  }
   bibcite_custom3:
     type: basic_string
-    weight: 11
+    weight: 9
     region: content
     label: above
     settings: {  }
     third_party_settings: {  }
   bibcite_custom4:
     type: basic_string
-    weight: 12
+    weight: 10
     region: content
     label: above
     settings: {  }
     third_party_settings: {  }
   bibcite_custom5:
     type: basic_string
-    weight: 13
+    weight: 11
     region: content
     label: above
     settings: {  }
     third_party_settings: {  }
   bibcite_custom6:
     type: basic_string
-    weight: 14
+    weight: 12
     region: content
     label: above
     settings: {  }
     third_party_settings: {  }
   bibcite_custom7:
     type: basic_string
-    weight: 15
+    weight: 13
     region: content
     label: above
     settings: {  }
@@ -144,7 +145,7 @@ content:
   bibcite_date:
     label: above
     type: string
-    weight: 26
+    weight: 24
     region: content
     settings:
       link_to_entity: false
@@ -152,7 +153,7 @@ content:
   bibcite_doi:
     label: above
     type: string
-    weight: 39
+    weight: 37
     region: content
     settings:
       link_to_entity: false
@@ -160,7 +161,7 @@ content:
   bibcite_edition:
     label: above
     type: string
-    weight: 20
+    weight: 18
     region: content
     settings:
       link_to_entity: false
@@ -168,7 +169,7 @@ content:
   bibcite_isbn:
     label: above
     type: string
-    weight: 33
+    weight: 31
     region: content
     settings:
       link_to_entity: false
@@ -176,7 +177,7 @@ content:
   bibcite_issn:
     label: above
     type: string
-    weight: 32
+    weight: 30
     region: content
     settings:
       link_to_entity: false
@@ -184,7 +185,7 @@ content:
   bibcite_issue:
     label: above
     type: string
-    weight: 22
+    weight: 20
     region: content
     settings:
       link_to_entity: false
@@ -192,7 +193,7 @@ content:
   bibcite_label:
     label: above
     type: string
-    weight: 49
+    weight: 47
     region: content
     settings:
       link_to_entity: false
@@ -200,19 +201,19 @@ content:
   bibcite_lang:
     label: above
     type: string
-    weight: 28
+    weight: 26
     region: content
     settings:
       link_to_entity: false
     third_party_settings: {  }
   bibcite_links:
-    weight: 100
+    weight: 52
     region: content
     settings: {  }
     third_party_settings: {  }
   bibcite_notes:
     type: basic_string
-    weight: 8
+    weight: 6
     region: content
     label: above
     settings: {  }
@@ -220,7 +221,7 @@ content:
   bibcite_number:
     label: above
     type: string
-    weight: 24
+    weight: 22
     region: content
     settings:
       link_to_entity: false
@@ -228,7 +229,7 @@ content:
   bibcite_number_of_volumes:
     label: above
     type: string
-    weight: 23
+    weight: 21
     region: content
     settings:
       link_to_entity: false
@@ -236,7 +237,7 @@ content:
   bibcite_original_publication:
     label: above
     type: string
-    weight: 45
+    weight: 43
     region: content
     settings:
       link_to_entity: false
@@ -244,7 +245,7 @@ content:
   bibcite_other_author_affiliations:
     label: above
     type: string
-    weight: 46
+    weight: 44
     region: content
     settings:
       link_to_entity: false
@@ -252,7 +253,7 @@ content:
   bibcite_other_number:
     label: above
     type: string
-    weight: 36
+    weight: 34
     region: content
     settings:
       link_to_entity: false
@@ -260,7 +261,7 @@ content:
   bibcite_pages:
     label: above
     type: string
-    weight: 25
+    weight: 23
     region: content
     settings:
       link_to_entity: false
@@ -268,7 +269,7 @@ content:
   bibcite_place_published:
     label: above
     type: string
-    weight: 31
+    weight: 29
     region: content
     settings:
       link_to_entity: false
@@ -276,7 +277,7 @@ content:
   bibcite_pmid:
     label: above
     type: string
-    weight: 52
+    weight: 50
     region: content
     settings:
       link_to_entity: false
@@ -284,7 +285,7 @@ content:
   bibcite_publisher:
     label: above
     type: string
-    weight: 30
+    weight: 28
     region: content
     settings:
       link_to_entity: false
@@ -292,7 +293,7 @@ content:
   bibcite_refereed:
     label: above
     type: string
-    weight: 51
+    weight: 49
     region: content
     settings:
       link_to_entity: false
@@ -300,7 +301,7 @@ content:
   bibcite_remote_db_name:
     label: above
     type: string
-    weight: 47
+    weight: 45
     region: content
     settings:
       link_to_entity: false
@@ -308,7 +309,7 @@ content:
   bibcite_remote_db_provider:
     label: above
     type: string
-    weight: 48
+    weight: 46
     region: content
     settings:
       link_to_entity: false
@@ -316,7 +317,7 @@ content:
   bibcite_reprint_edition:
     label: above
     type: string
-    weight: 29
+    weight: 27
     region: content
     settings:
       link_to_entity: false
@@ -324,7 +325,7 @@ content:
   bibcite_research_notes:
     label: above
     type: string
-    weight: 40
+    weight: 38
     region: content
     settings:
       link_to_entity: false
@@ -332,7 +333,7 @@ content:
   bibcite_secondary_title:
     label: above
     type: string
-    weight: 18
+    weight: 16
     region: content
     settings:
       link_to_entity: false
@@ -340,7 +341,7 @@ content:
   bibcite_section:
     label: above
     type: string
-    weight: 21
+    weight: 19
     region: content
     settings:
       link_to_entity: false
@@ -348,7 +349,7 @@ content:
   bibcite_short_title:
     label: above
     type: string
-    weight: 42
+    weight: 40
     region: content
     settings:
       link_to_entity: false
@@ -356,7 +357,7 @@ content:
   bibcite_tertiary_title:
     label: above
     type: string
-    weight: 41
+    weight: 39
     region: content
     settings:
       link_to_entity: false
@@ -364,20 +365,20 @@ content:
   bibcite_translated_title:
     label: above
     type: string
-    weight: 44
+    weight: 42
     region: content
     settings:
       link_to_entity: false
     third_party_settings: {  }
   bibcite_type:
-    weight: 100
+    weight: 53
     region: content
     settings: {  }
     third_party_settings: {  }
   bibcite_type_of_work:
     label: above
     type: string
-    weight: 27
+    weight: 25
     region: content
     settings:
       link_to_entity: false
@@ -385,7 +386,7 @@ content:
   bibcite_url:
     label: above
     type: string
-    weight: 38
+    weight: 36
     region: content
     settings:
       link_to_entity: false
@@ -393,14 +394,14 @@ content:
   bibcite_volume:
     label: above
     type: string
-    weight: 19
+    weight: 17
     region: content
     settings:
       link_to_entity: false
     third_party_settings: {  }
   bibcite_year:
     type: number_integer
-    weight: 17
+    weight: 15
     region: content
     label: above
     settings:
@@ -408,20 +409,29 @@ content:
       prefix_suffix: true
     third_party_settings: {  }
   citation:
-    weight: 100
+    weight: 51
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_taxonomy_terms:
+    type: cp_taxonomy_comma_separator
+    weight: 54
+    region: content
+    label: hidden
+    settings:
+      label: 'See also'
+      number_of_characters: 94
+    third_party_settings: {  }
   full_text:
     type: text_default
-    weight: 5
+    weight: 2
     region: content
     label: above
     settings: {  }
     third_party_settings: {  }
   keywords:
     type: entity_reference_label
-    weight: 4
+    weight: 1
     region: content
     label: above
     settings:
@@ -429,7 +439,7 @@ content:
     third_party_settings: {  }
   notes:
     type: text_default
-    weight: 6
+    weight: 3
     region: content
     label: above
     settings: {  }
@@ -440,7 +450,6 @@ hidden:
   field_extra_fields: true
   field_publication_image: true
   field_redirect_to_source: true
-  field_taxonomy_terms: true
   html_title: true
   langcode: true
   publishers_version: true
