Issue #12331 - changed file name

--- a/profile/modules/apps/os_widgets/os_widgets.libraries.yml
+++ b/profile/modules/apps/os_widgets/os_widgets.libraries.yml
@@ -42,4 +42,4 @@ followMe:
     base:
       /libraries/rrssb-plus/css/rrssb.css: {}
       /libraries/rrssb-plus/css/rrssb.buttons.css: {}
-      css/followme.css: {}
+      css/os_widgets.followme.css: {}
