--- a/config/sync/views.view.publications.yml
+++ b/config/sync/views.view.publications.yml
@@ -1216,7 +1216,7 @@ display:
     cache_metadata:
       max-age: 0
       contexts:
-        - group_membership.roles.permissions
+        - user.group_permissions
         - 'languages:language_content'
         - 'languages:language_interface'
         - url
