Issue #12331 -  Fixed PR review changes and library loading issue.

--- a/profile/modules/apps/os_widgets/os_widgets.libraries.yml
+++ b/profile/modules/apps/os_widgets/os_widgets.libraries.yml
@@ -35,13 +35,14 @@ accordionWidget:
 randomWidget:
   js:
     js/os_widgets.random.js: {}
-followMe:
+followMeWidgetJs:
   js:
     js/os_widgets.follow_me.js: {}
+  dependencies:
+    - core/drupal
+followMeWidgetCss:
   css:
     base:
       /libraries/rrssb-plus/css/rrssb.css: {}
       /libraries/rrssb-plus/css/rrssb.buttons.css: {}
       css/os_widgets.followme.css: {}
-  dependencies:
-    - core/drupal
