--- a/config/sync/field.field.block_content.taxonomy.field_taxonomy_bundle.yml
+++ b/config/sync/field.field.block_content.taxonomy.field_taxonomy_bundle.yml
@@ -11,7 +11,7 @@ id: block_content.taxonomy.field_taxonomy_bundle
 field_name: field_taxonomy_bundle
 entity_type: block_content
 bundle: taxonomy
-label: Bundle
+label: Type
 description: ''
 required: false
 translatable: false
