Issue #12438 - Suggested PR changes. (#12533)
* Issue #12438 - Suggested PR changes.

* Issue #12438 - Suggested PR changes.

--- a/profile/modules/os/modules/os_media/os_media.services.yml
+++ b/profile/modules/os/modules/os_media/os_media.services.yml
@@ -4,4 +4,4 @@ services:
     arguments: ['@entity_type.manager']
   os_media.media_helper:
     class: \Drupal\os_media\MediaEntityHelper
-    arguments: ['@http_client', '@media.oembed.iframe_url_helper', '@config.factory', '@messenger']
+    arguments: ['@http_client', '@media.oembed.iframe_url_helper', '@config.factory', '@messenger', '@logger.factory']
