--- a/config/sync/group.role.personal-anonymous.yml
+++ b/config/sync/group.role.personal-anonymous.yml
@@ -12,17 +12,18 @@ audience: anonymous
 group_type: personal
 permissions_ui: true
 permissions:
-  0: 'view group_node:person entity'
-  1: 'view group_entity:bibcite_reference entity'
-  2: 'view group_entity:bibcite_reference content'
-  6: 'view group_node:blog entity'
-  7: 'view group_node:class entity'
-  8: 'view group_node:events entity'
-  9: 'view group_node:faq entity'
-  10: 'view group_node:link entity'
-  11: 'view group_node:news entity'
-  12: 'view group_node:page entity'
-  14: 'view group_node:presentation entity'
-  15: 'view group_node:software_project entity'
-  16: 'view group_node:software_release entity'
+  - 'view group'
+  - 'view group_entity:bibcite_reference content'
+  - 'view group_entity:bibcite_reference entity'
+  - 'view group_node:blog entity'
+  - 'view group_node:class entity'
+  - 'view group_node:events entity'
+  - 'view group_node:faq entity'
+  - 'view group_node:link entity'
+  - 'view group_node:news entity'
+  - 'view group_node:page entity'
+  - 'view group_node:person entity'
+  - 'view group_node:presentation entity'
+  - 'view group_node:software_project entity'
+  - 'view group_node:software_release entity'
 description: null
