--- a/config/sync/group.role.personal-member.yml
+++ b/config/sync/group.role.personal-member.yml
@@ -12,30 +12,30 @@ audience: member
 group_type: personal
 permissions_ui: true
 permissions:
-  0: 'access group_node overview'
-  1: 'create group_node:landing_page entity'
-  2: 'delete any group_node:landing_page entity'
-  3: 'update any group_node:landing_page entity'
-  4: 'view group_node:landing_page entity'
-  5: 'view unpublished group_node:landing_page entity'
-  6: 'vsite access group_node overview'
-  7: 'view group'
-  8: 'update own group_membership content'
-  9: 'leave group'
-  10: 'view group_membership content'
-  11: 'view group_entity:media entity'
-  13: 'view group_entity:taxonomy_term entity'
-  15: 'view group_node:class entity'
-  17: 'view group_node:events entity'
-  19: 'view group_node:faq entity'
-  21: 'view group_node:link entity'
-  23: 'view group_node:news entity'
-  25: 'view group_node:page entity'
-  27: 'view group_node:person entity'
-  29: 'view group_node:presentation entity'
-  31: 'view group_node:software_project entity'
-  33: 'view group_node:software_release entity'
-  35: 'view group_entity:bibcite_reference entity'
-  36: 'view group_node:blog entity'
-  38: 'access private apps'
+  - 'access group_node overview'
+  - 'access private apps'
+  - 'create group_node:landing_page entity'
+  - 'delete any group_node:landing_page entity'
+  - 'leave group'
+  - 'update any group_node:landing_page entity'
+  - 'update own group_membership content'
+  - 'view group'
+  - 'view group_entity:bibcite_reference entity'
+  - 'view group_entity:media entity'
+  - 'view group_entity:taxonomy_term entity'
+  - 'view group_membership content'
+  - 'view group_node:blog entity'
+  - 'view group_node:class entity'
+  - 'view group_node:events entity'
+  - 'view group_node:faq entity'
+  - 'view group_node:landing_page entity'
+  - 'view group_node:link entity'
+  - 'view group_node:news entity'
+  - 'view group_node:page entity'
+  - 'view group_node:person entity'
+  - 'view group_node:presentation entity'
+  - 'view group_node:software_project entity'
+  - 'view group_node:software_release entity'
+  - 'view unpublished group_node:landing_page entity'
+  - 'vsite access group_node overview'
 description: '<em>Viewer</em> may have read-only access to private sites and private apps.'
