Issue #12458 - Fix media form displays

--- a/config/sync/core.entity_form_display.media.document.default.yml
+++ b/config/sync/core.entity_form_display.media.document.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - media.type.document
   module:
     - content_moderation
+    - cp_taxonomy
     - field_layout
     - file
     - layout_discovery
@@ -36,12 +37,9 @@ content:
     third_party_settings: {  }
   field_taxonomy_terms:
     weight: 26
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: reference_taxonomy_terms
     region: content
   langcode:
     type: language_select
