--- a/config/sync/core.entity_form_display.media.image.default.yml
+++ b/config/sync/core.entity_form_display.media.image.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - media.type.image
   module:
     - content_moderation
+    - cp_taxonomy
     - field_layout
     - image
     - layout_discovery
@@ -47,12 +48,9 @@ content:
     third_party_settings: {  }
   field_taxonomy_terms:
     weight: 26
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: reference_taxonomy_terms
     region: content
   langcode:
     type: language_select
