--- a/config/sync/core.entity_form_display.media.oembed.default.yml
+++ b/config/sync/core.entity_form_display.media.oembed.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - media.type.oembed
   module:
     - content_moderation
+    - cp_taxonomy
     - field_layout
     - layout_discovery
     - media
@@ -37,12 +38,9 @@ content:
     region: content
   field_taxonomy_terms:
     weight: 26
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: reference_taxonomy_terms
     region: content
   langcode:
     type: language_select
