--- a/config/sync/core.entity_form_display.media.video.default.yml
+++ b/config/sync/core.entity_form_display.media.video.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - media.type.video
   module:
     - content_moderation
+    - cp_taxonomy
     - field_layout
     - file
     - layout_discovery
@@ -46,12 +47,9 @@ content:
     third_party_settings: {  }
   field_taxonomy_terms:
     weight: 26
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: reference_taxonomy_terms
     region: content
   field_width:
     type: number
