--- a/profile/modules/apps/os_widgets/os_widgets.services.yml
+++ b/profile/modules/apps/os_widgets/os_widgets.services.yml
@@ -13,3 +13,6 @@ services:
     arguments: ['@request_stack', '@current_user', '@vsite.context_manager']
     tags:
       - { name: event_subscriber }
+  os_widgets.context:
+    class: Drupal\os_widgets\OsWidgetsContext
+    parent: default_plugin_manager
