Issue #12123 - Start to implement responsive image in slideshow slick widget (WIP)

--- a/config/sync/core.entity_view_display.block_content.slideshow.default.yml
+++ b/config/sync/core.entity_view_display.block_content.slideshow.default.yml
@@ -31,7 +31,7 @@ content:
     weight: 1
     label: above
     settings:
-      optionset: default
+      optionset: os_slideshow
       skin: ''
       view_mode: slideshow_standard
       cache: 0
