--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -232,6 +232,7 @@ theme:
   shadow: 0
   soft: 0
   smart: 0
+  branded_theme: 0
 profile: openscholar
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
