--- a/profile/modules/cp/modules/cp_users/cp_users.services.yml
+++ b/profile/modules/cp/modules/cp_users/cp_users.services.yml
@@ -13,3 +13,8 @@ services:
       - { name: access_check, applies_to: _cp_roles_operation_access_check }
   cp_users.cp_users_helper:
     class: \Drupal\cp_users\CpUsersHelper
+  cp_users.custom_role_permission_calculator:
+    class: \Drupal\cp_users\Access\CustomRolePermissionCalculator
+    arguments: ['@vsite.context_manager']
+    tags:
+      - { name: group_permission_calculator, priority: -200 }
