--- a/profile/modules/vsite/tests/modules/vsite_module_test/config/install/group.role.subsite_test-anonymous.yml
+++ b/profile/modules/vsite/tests/modules/vsite_module_test/config/install/group.role.subsite_test-anonymous.yml
@@ -11,4 +11,5 @@ internal: true
 audience: anonymous
 group_type: subsite_test
 permissions_ui: true
-permissions: {  }
+permissions:
+  - 'view group'
