--- a/config/sync/core.entity_view_display.media.image.slideshow_standard.yml
+++ b/config/sync/core.entity_view_display.media.image.slideshow_standard.yml
@@ -7,7 +7,7 @@ dependencies:
     - field.field.media.image.field_image_caption
     - field.field.media.image.field_media_image
     - field.field.media.image.field_taxonomy_terms
-    - image.style.os_slideshow_standard
+    - image.style.os_slideshow_standard_large
     - media.type.image
   module:
     - image
@@ -28,7 +28,7 @@ content:
     region: content
     label: hidden
     settings:
-      image_style: os_slideshow_standard
+      image_style: os_slideshow_standard_large
       image_link: ''
     third_party_settings: {  }
 hidden:
