--- a/config/sync/system.action.media_publish_action.yml
+++ b/config/sync/system.action.media_publish_action.yml
@@ -1,3 +1,4 @@
+uuid: 9a5034b7-e166-4dbd-8d00-55ac2f9436e8
 langcode: en
 status: true
 dependencies:
@@ -6,5 +7,5 @@ dependencies:
 id: media_publish_action
 label: 'Publish media'
 type: media
-plugin: entity:publish_action:media
+plugin: 'entity:publish_action:media'
 configuration: {  }
