--- a/config/sync/system.action.media_save_action.yml
+++ b/config/sync/system.action.media_save_action.yml
@@ -1,3 +1,4 @@
+uuid: 5637b1c1-2aa2-47a8-ad0c-bc954ae3a0d0
 langcode: en
 status: true
 dependencies:
@@ -6,5 +7,5 @@ dependencies:
 id: media_save_action
 label: 'Save media'
 type: media
-plugin: entity:save_action:media
+plugin: 'entity:save_action:media'
 configuration: {  }
