--- a/config/sync/views.view.os_media.yml
+++ b/config/sync/views.view.os_media.yml
@@ -338,7 +338,7 @@ display:
           summary: ''
           description: ''
           columns:
-            views_bulk_operations_bulk_form: views_bulk_operations_bulk_form
+            media_bulk_form: media_bulk_form
             name_1: name_1
             uri: uri
             uri_1: uri_1
@@ -356,13 +356,14 @@ display:
             created: created
             title: title
             html_title__value: html_title__value
-            view_node: nothing_1
-            view_node_1: nothing_1
-            view_node_2: nothing_1
-            view_bibcite_reference: nothing_1
-            nothing_1: nothing_1
+            view_node: view_bibcite_reference
+            view_node_1: view_bibcite_reference
+            view_node_2: view_bibcite_reference
+            view_bibcite_reference: view_bibcite_reference
+            edit_media: edit_media
+            delete_media: edit_media
           info:
-            views_bulk_operations_bulk_form:
+            media_bulk_form:
               align: ''
               separator: ''
               empty_column: false
@@ -510,11 +511,18 @@ display:
               separator: ','
               empty_column: false
               responsive: ''
-            nothing_1:
+            edit_media:
               sortable: false
               default_sort_order: asc
               align: ''
-              separator: ','
+              separator: ' '
+              empty_column: false
+              responsive: ''
+            delete_media:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
               empty_column: false
               responsive: ''
           default: created
@@ -535,6 +543,60 @@ display:
           hide_empty: false
           default_field_elements: true
       fields:
+        media_bulk_form:
+          id: media_bulk_form
+          table: media
+          field: media_bulk_form
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          action_title: Action
+          include_exclude: include
+          selected_actions:
+            - media_delete_action
+          entity_type: media
+          plugin_id: bulk_form
         name_1:
           id: name_1
           table: media_field_data
@@ -1646,7 +1708,7 @@ display:
           label: ''
           exclude: false
           alter:
-            alter_text: false
+            alter_text: true
             text: '{{ title }}'
             make_link: false
             path: ''
@@ -1699,7 +1761,7 @@ display:
           label: ''
           exclude: false
           alter:
-            alter_text: false
+            alter_text: true
             text: '{{ title }}'
             make_link: false
             path: ''
@@ -1749,7 +1811,7 @@ display:
           relationship: reverse__bibcite_reference__field_attach_files
           group_type: group
           admin_label: ''
-          label: ''
+          label: 'Used in'
           exclude: false
           alter:
             alter_text: true
@@ -1795,17 +1857,17 @@ display:
           absolute: false
           entity_type: bibcite_reference
           plugin_id: entity_link
-        nothing_1:
-          id: nothing_1
-          table: views
-          field: nothing
+        delete_media:
+          id: delete_media
+          table: media
+          field: delete_media
           relationship: none
           group_type: group
           admin_label: ''
-          label: 'Used in'
-          exclude: false
+          label: ''
+          exclude: true
           alter:
-            alter_text: true
+            alter_text: false
             text: ''
             make_link: false
             path: ''
@@ -1817,6 +1879,125 @@ display:
             alt: ''
             rel: ''
             link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          text: Delete
+          output_url_as_text: false
+          absolute: false
+          entity_type: media
+          plugin_id: entity_link_delete
+        mid:
+          id: mid
+          table: media_field_data
+          field: mid
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: number_integer
+          settings:
+            thousand_separator: ''
+            prefix_suffix: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: media
+          entity_field: mid
+          plugin_id: field
+        nothing_1:
+          id: nothing_1
+          table: views
+          field: nothing
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: Manage
+          exclude: false
+          alter:
+            alter_text: true
+            text: "<a file-editor-modal=\"\" fid=\"{{mid}}\" href=\"#\" views-close=\"reload(result)\" class=\"ng-isolate-scope\">Edit</a>\r\n{{ delete_media }}"
+            make_link: false
+            path: '#'
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ng-isolate-scope
             prefix: ''
             suffix: ''
             target: ''
@@ -2074,17 +2255,6 @@ display:
           required: false
           entity_type: media
           plugin_id: entity_reverse
-        fid:
-          id: fid
-          table: file_managed
-          field: fid
-          relationship: field_media_file_target_id
-          group_type: group
-          admin_label: 'File usage'
-          required: false
-          entity_type: file
-          entity_field: fid
-          plugin_id: standard
         reverse__bibcite_reference__field_attach_files:
           id: reverse__bibcite_reference__field_attach_files
           table: media_field_data
@@ -2238,7 +2408,7 @@ display:
           separator: ', '
           suffix: ''
     cache_metadata:
-      max-age: -1
+      max-age: 0
       contexts:
         - group_membership.roles.permissions
         - 'languages:language_content'
