--- a/profile/modules/os/os.libraries.yml
+++ b/profile/modules/os/os.libraries.yml
@@ -203,7 +203,7 @@ fileEditor:
     - os/taxonomyWidget
 
 fileEditorModal:
-  version: 1.0
+  version: 1.1
   js:
     js/FileEditor/FileEditorModal.module.js: { }
   dependencies:
@@ -229,3 +229,16 @@ osSelectAllOption:
   version: 1.0
   js:
     js/os-select-all-option.module.js: { }
+
+osMediaBrowse:
+  version: 1.0
+  js:
+    js/apps/osMediaBrowse.js: { app: osMediaBrowse }
+  drupalSettings:
+    version:
+      osMediaBrowser: "1.0"
+    angularModules:
+      osMediaBrowse: osMediaBrowse
+  dependencies:
+    - os_media/mediaBrowser
+    - os/fileEditorModal
