Issue #10897 - Veiws as embed fields.

--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -170,6 +170,7 @@ module:
   video_embed_media: 0
   views_accordion: 0
   views_advanced_routing: 0
+  views_field_view: 0
   views_ical: 0
   views_infinite_scroll: 0
   views_ui: 0
